# tfm_source_simplifier

./: .gitignore  CMakeLists.txt  README.md  README.txt
resources/: tfm.swf
src/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  HungarianMatch.cpp  HungarianMatch.hpp  MaxBipartiteMatch.cpp  MaxBipartiteMatch.hpp  TB_rename_box2d.cpp  TB_rename_box2d_table.hpp  TB_rename_by_trait.cpp  TB_rename_identifiers.cpp  TB_simplify_expressions.cpp  ToolBox.hpp  common.cpp  common.hpp  main.cpp
src/swf/: AbcClass.hpp  AbcConstants.hpp  AbcFile.hpp  AbcFile_read.cpp  AbcFile_write.cpp  AbcMethod.hpp  AbcMultiname.hpp  AbcOpcode.cpp  AbcOpcode.hpp  CMakeLists.txt  SwfFile.cpp  SwfFile.hpp  SwfTag.cpp  SwfTag.hpp
tools/: CMakeLists.txt  tool_box2d_parse.cpp  tool_strip_c_comments.cpp
