cmake_minimum_required (VERSION 3.13.5)
set(CMAKE_CXX_STANDARD 17)
set(ZLIB_VERSION zlib-1.2.11)
project(tfm_src_simple CXX)
add_executable(tfm_src_simple "")
add_executable(tool_box2d_parse "")
add_executable(tool_strip_c_comments "")
add_subdirectory(${ZLIB_VERSION})
target_include_directories(tfm_src_simple SYSTEM PUBLIC ${ZLIB_VERSION})
target_include_directories(tfm_src_simple SYSTEM PUBLIC ${ZLIB_INCLUDE_DIR})
add_subdirectory(src)
add_subdirectory(tools)
target_link_libraries(tfm_src_simple zlibstatic)
